# CPPGameLauncher

./: CMakeLists.txt  CPPGameLauncher.rc  CPPGameLauncher.sln  CPPGameLauncher.vcxproj  CPPGameLauncher.vcxproj.filters  LICENSE  README.md  button.cpp  button.h  compression.cpp  compression.h  constants.h  crc.h  downloader.cpp  downloader.h  fontloader.cpp  fontloader.h  graphicscache.cpp  graphicscache.h  helper.cpp  helper.h  iniparser.h  init.cpp  main.cpp  main.h  newslabel.cpp  newslabel.h  patcher.cpp  patcher.h  pngloader.cpp  pngloader.h  progressbar.cpp  progressbar.h  resource.h  rsaverifier.cpp  rsaverifier.h  sha256.cpp  sha256.h  stdafx.cpp  stdafx.h
libs/: README.md
